18_reverse_str/grade.txt
Grading at Sun Mar  1 09:13:04 UTC 2020
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:8:12: error: ‘return’ with a value, in function returning void [-Werror]
     return 0;
            ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
